# mywebproject

./: .gitignore  db.sqlite3  main.py  pyproject.toml
mainmenu/: admin.py  forms.py  models.py  views.bak..py  views.py
mainmenu/migrations/: 0001_initial.py  0002_alter_library_image.py  0003_remove_bookrental_address_bookrental_email.py  0004_shop.py  0005_alter_shop_description.py  0006_cartitem_order.py  0007_product_alter_cartitem_product_delete_shop.py  0008_alter_product_name.py  0009_remove_product_stock.py  0010_product_stock.py  0011_alter_cartitem_id.py  0012_alter_order_id.py
mainmenu/templates/: about.html  base.html  bookdetail.html  bookrental.html  cart.html  contact.html  contact_thank_you.html  home.html  library.html  motordetail.html  motorhome.html  product_detail.html  product_list.html
webprofile/: asgi.py  settings.py  urls.py  wsgi.py
